clusters/apps/staging/grimmory/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grimmory
  namespace: grimmory
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - grimmory.boshock.ovh
      secretName: grimmory-tls
  rules:
    - host: grimmory.boshock.ovh
      http:
        paths:
          - backend:
              service:
                name: grimmory
                port:
                  number: 6060
            path: /
            pathType: Prefix
